--- a/iNrollApp/iNrollApp/Pages/LoginPage.razor
+++ b/iNrollApp/iNrollApp/Pages/LoginPage.razor
@@ -27,7 +27,7 @@
                                 <p class="validation-error">@validationErrors["Password"]</p>
                             }
                         </div>
-                        <button @onclick="@SubmitForm" class="btn btn-primary btn-block">Login</button>
+                        <button type="submit" class="btn btn-primary btn-block">Login</button>
                     </form>
                     <div class="text-center mt-3">
                         <p>Don't have an account? <a href="/RegisterPage">Register here</a></p>
